--- a/.travis.yml
+++ b/.travis.yml
@@ -24,16 +24,15 @@ addons:
 install:
     # clone other required repos
     - "cd .."
-    - "git clone https://github.com/ld4apps/lda-examples.git"
+    - "git clone https://github.com/FityFity/lda-examples.git" # TODO: change to ld4apps after pull request is accepted
     - "git clone https://github.com/ld4apps/lda-clientlib.git"
-    #- "git clone https://github.com/ld4apps/lda-siteserver.git"
-    - "git clone https://github.com/FityFity/lda-siteserver.git"
+    - "git clone https://github.com/ld4apps/lda-siteserver.git"
     # install dependencies (currently just doing siteserver's seems to work but in the future may need to do it for all repos)
     - "cd lda-siteserver"
-    - "git checkout travis_ci" # TODO: remove this after pull request is accepted
     - "python setup.py install"
     - "sudo apt-get install -y nginx"
     - "cd ../lda-examples"
+    - "git checkout travis_ci" # TODO: remove this after pull request is accepted
 
 before_script:
     # Copy nginx config and start service
